# TradeFlow-Core

./: .gitignore  BUYBACK_BURN_DOCUMENTATION.md  Cargo.toml  EVENTS.md  MATH_AUDIT_REPORT.md  Makefile  OPTIMIZATION_REPORT.md  PR_DESCRIPTION.md  PR_DESCRIPTION_BUYBACK.md  README.md  README_SERVER.md  Readme_versioning_section.md  TODO.md  auth.ts  lib.rs  package-lock.json  package.json  server.js  test_i256.rs  tests.rs
.github/workflows/: ci.yml
contracts/amm_factory/: Cargo.toml
contracts/amm_factory/src/: lib.rs  tests.rs
contracts/amm_pool/: Cargo.toml
contracts/invoice_nft/: Cargo.toml
contracts/invoice_nft/src/: lib.rs  tests.rs
contracts/invoice_nft/test_snapshots/tests/tests/: test_mint_invalid_signature.1.json  test_mint_invoice_success.1.json  test_repay_invoice.1.json
contracts/lending_pool/: Cargo.toml
contracts/tradeflow/: Cargo.toml
docs/: DEPLOYMENT_CHECKLIST.md  INVOICE_SUBMISSION_FEATURE.md  MATH_SPEC.md  STORAGE_RENT_STRATEGY.md  SWAP_FLOW.md
docs/architecture/: BUYBACK_BURN_DOCUMENTATION.md  EMERGENCY_FREEZE_IMPLEMENTATION.md  EVENTS.md  PAIR_EXISTS_IMPLEMENTATION.md  SECURITY_ENHANCEMENTS.md  TWAP_ORACLE_DOCUMENTATION.md  TWAP_ORACLE_IMPLEMENTATION.md  UPGRADEABLE_CONTRACT_DOCUMENTATION.md
docs/archive/: IMPLEMENTATION_SUMMARY.md  MULTI_FEE_TIER_PR.md  PR_DESCRIPTION.md  PR_DESCRIPTION_UPGRADEABLE.md  PR_SECURITY_ENHANCEMENTS.md
frontend/: next.config.js  package.json
frontend/public/: manifest.json  sw.js
scripts/: test_pagination.js
tests/: 404-handler.test.js
utils/: auth.js  formatters.js  math.rs
(+611 files in other folders)
