[workspace]
resolver = "2"
members = [
    "contracts/invoice_nft",
    "contracts/lending_pool",
    "contracts/tradeflow",
    "contracts/amm_pool",
    "contracts/amm_factory"
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true